Address review comments
Signed-off-by: Sara Adams <sara.e.adams@gmail.com>